@@ -121,3 +121,4 @@ P: "…"
 W: "tavutus­vihje"
 P: "»"
 P: "”"
+P: "“"
